// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders a link 1`] = `
<a
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`EuiHeaderSectionItemButton renders children 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span>
        Ahoy!
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a badge 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiNotificationBadge euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
      >
        1
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a dot 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--dot"
        color="accent"
        data-euiicon-type="dot"
      />
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiNotificationBadge euiNotificationBadge--subdued euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
      >
        1
      </span>
    </span>
  </span>
</button>
`;
